# openapi-object-sanitizer

./: README.md  pyproject.toml
examples/: example01.py  example02.py  example03.py  example04.py  openapi.yaml
openapi_object_sanitizer/: sanitizer.py  validator.py
tests/: openapi.yaml  test_sanitizer.py
